--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-.vscode
-past_papers/past_papers_408
+/.vscode
+/past_papers/past_papers_408
+/LeetCode/LeetCode 101 - A LeetCode Grinding Guide (C++ Version).pdf
